# InSituANN-OpenSource

./: .gitignore  CMakeLists.txt  EXPERIMENT_COMMIT.md  README.md
configs/: paper_100m.yaml  paper_1b.yaml
cuda/: cuda_wrapper.cu  cuda_wrapper.h  cudatimer.h  numa_utils.h  utils.cu  utils.cuh
cuda/clustering/: clustering.cuh
cuda/clustering/hierarchical/: hierarchical.cu  hierarchical.cuh
cuda/clustering/kmeans/: kmeans.cu  kmeans.cuh  kmeans_clustering.cu  kmeans_minibatch.cu  kmeans_reorder.cu  kmeans_reorder_utils.cu  kmeans_reorder_utils.cuh  kmeans_utils.cu
cuda/dataset/: cpu_array_utils.h  dataset.cuh  dataset_wrapper.cpp
cuda/l2norm/: l2norm.cu  l2norm.cuh  l2norm_squared.cu
cuda/layout/: ivf_bcs.cpp  ivf_bcs.cuh
cuda/quantization/: quantizer.cuh
cuda/quantization/linear/: linear_fp16.cu  linear_fp16.cuh  linear_fp16_cpu.cpp
cuda/search/: ivf_search.cu  ivf_search.cuh  ivf_search_balanced.cu  ivf_search_lookup.cu  ivf_search_no_lookup.cu  ivf_search_pipeline.cu  ivf_search_separated.cu  ivf_search_stages.cu  ivf_search_wrapper.cpp
cuda/search/coarse/: fusion_cos_topk_warpsort.cu  fusion_dist_topk.cuh  fusion_l2_topk_warpsort.cu
cuda/search/cpu_fine/: CMakeLists.txt  cpu_fine.h  cpu_fine_common.h  cpu_fine_dispatch.cpp  cpu_fine_kernels_pq_resid.cpp  cpu_fine_kernels_v0.cpp  cpu_fine_kernels_v1.cpp  cpu_fine_kernels_v2.cpp  cpu_fine_kernels_v3.cpp  cpu_fine_kernels_v3_u8.cpp  cpu_fine_kernels_v4.cpp  cpu_fine_kernels_v5.cpp  cpu_fine_kernels_v6.cpp  cpu_fine_layout.cpp  cpu_fine_layout.h  cpu_fine_pq_resid.h  cpu_fine_u8.h  ivf_search_cpu_fine.cu
cuda/search/fine/: indexed_gemm.cu  indexed_gemm.cuh  indexed_gemm_cos.cu  indexed_gemm_l2.cu  inner_product_utils.cuh
cuda/search/topk/: bitonic.cuh  warpsort.cuh  warpsort_topk.cu  warpsort_utils.cuh
dynamic_updates/: README.md  __init__.py  benchmark_real_datasets.py  benchmark_updates.py  snapshot_delta_index.py
scripts/: check_release_consistency.py  convert_bvecs_to_u8bin.py  convert_fbin_to_u8bin.py  download_datasets.sh  gen_bruteforce_gt.py  gen_gt_fast.py  train_ivfpq_residual.py
updates/: CMakeLists.txt  build.sh  exact_update.cu  io.h  pq_update.cu
